--- a/MovieScribe/Views/Account/Register.cshtml
+++ b/MovieScribe/Views/Account/Register.cshtml
@@ -18,12 +18,16 @@
                         <div class="mb-md-5 mt-md-4 pb-5">
                             <h2 class="fw-bold mb-2 text-uppercase" style="margin-bottom: 5px">Sign up for a new account</h2>
 
-                            <form asp-action="Register">
+                            <form asp-action="Register" enctype="multipart/form-data">
                                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                                 <div class="form-outline form-white mb-4">
                                     <input asp-for="UserName" class="form-control form-control-lg" placeholder="Username" />
                                     <span asp-validation-for="UserName" class="text-danger"></span>
+                                </div>
+
+                                <div class="form-outline form-white mb-3">
+                                    <input type="file" id="ProfilePicture" name="ProfilePicture" class="form-control" accept="image/*" />
                                 </div>
 
                                 <div class="form-outline form-white mb-4">
