--- a/MovieScribe/Views/Actor/Details.cshtml
+++ b/MovieScribe/Views/Actor/Details.cshtml
@@ -16,7 +16,8 @@
                                     {
                                         var base64 = Convert.ToBase64String(Model.ImageData);
                                         var imgSrc = String.Format($"data:{Model.ImageMimeType};base64,{base64}");
-                                        <img src="@imgSrc" class="img-fluid rounded" style="max-width: 600px; max-height: 600px; object-fit: contain;" />
+                                        <img src="@imgSrc" class="img-fluid rounded" style="max-width: 500px; max-height: 700px; object-fit: contain;" />
+
                                     }
                                     else
                                     {
@@ -40,6 +41,20 @@
                                             @Model.Biography
                                         </p>
                                     </div>
+                                    <p class="card-text">
+                                        @if (User.Identity.IsAuthenticated && User.IsInRole("admin") || User.IsInRole("moderator"))
+                                        {
+                                            <b style="color: white;">Non-User actions:</b>
+                                            <a class="btn btn-success float-right" asp-action="Edit" asp-route-id="@Model.ID">Edit</a>
+                                            <form id="delete-actor-form" asp-controller="Actor" asp-action="DeleteConfirmed" method="post">
+                                                <input type="hidden" name="id" value="@Model.ID" />
+                                                <div id="delete-actor-button-container" class="float-right mt-2">
+                                                    <button id="delete-actor-btn" class="btn btn-danger">Delete</button>
+                                                    <button id="confirm-delete-actor-btn" type="submit" class="btn btn-danger" style="display: none;">Confirm Delete</button>
+                                                </div>
+                                            </form>
+                                        }
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -49,3 +64,10 @@
         </div>
     </div>
 </section>
+<script src="~/js/prepareDeleteButtons.js"></script>
+@section Scripts {
+    <script>
+        prepareDeleteButtons('delete-actor-btn', 'confirm-delete-actor-btn');
+    </script>
+}
+
