--- a/MovieScribe/Views/Media/Details.cshtml
+++ b/MovieScribe/Views/Media/Details.cshtml
@@ -139,11 +139,17 @@
                                 <a class="btn btn-secondary" asp-action="Index">Back to list</a>
                             </p>
                             <p class="card-text">
-                                <b>Non-User actions:</b>
                                 @if (User.Identity.IsAuthenticated && User.IsInRole("admin") || User.IsInRole("moderator"))
                                 {
+                                    <b>Non-User actions:</b>
                                     <a class="btn btn-success float-right" asp-action="Edit" asp-route-id="@Model.ID">Edit</a>
-                                    <a class="btn btn-danger float-right" asp-action="Delete" asp-route-id="@Model.ID">Delete</a>
+                                    <form id="delete-media-form" asp-controller="Media" asp-action="DeleteConfirmed" method="post">
+                                        <input type="hidden" name="id" value="@Model.ID" />
+                                        <div id="delete-media-button-container" class="float-right mt-2">
+                                            <button id="delete-media-btn" class="btn btn-danger">Delete</button>
+                                            <button id="confirm-delete-media-btn" type="submit" class="btn btn-danger" style="display: none;">Confirm Delete</button>
+                                        </div>
+                                    </form>
                                 }
                             </p>
                         </div>
@@ -153,6 +159,7 @@
         </div>
     </div>
 </div>
+<script src="~/js/prepareDeleteButtons.js"></script>
 @section Scripts {
     <script>
         document.addEventListener("DOMContentLoaded", function () {
@@ -183,5 +190,7 @@
                 }
             });
         });
+
+        prepareDeleteButtons('delete-media-btn', 'confirm-delete-media-btn');
     </script>
 }
