--- a/MovieScribe/Views/Studio/Details.cshtml
+++ b/MovieScribe/Views/Studio/Details.cshtml
@@ -31,6 +31,20 @@
                                             @Model.Description
                                         </p>
                                     </div>
+                                    <p class="card-text">
+                                        @if (User.Identity.IsAuthenticated && User.IsInRole("admin") || User.IsInRole("moderator"))
+                                        {
+                                            <b style="color: white;">Non-User actions:</b>
+                                            <a class="btn btn-success float-right" asp-action="Edit" asp-route-id="@Model.ID">Edit</a>
+                                            <form id="delete-studio-form" asp-controller="Studio" asp-action="DeleteConfirmed" method="post">
+                                                <input type="hidden" name="id" value="@Model.ID" />
+                                                <div id="delete-studio-button-container" class="float-right mt-2">
+                                                    <button id="delete-studio-btn" class="btn btn-danger">Delete</button>
+                                                    <button id="confirm-delete-studio-btn" type="submit" class="btn btn-danger" style="display: none;">Confirm Delete</button>
+                                                </div>
+                                            </form>
+                                        }
+                                    </p>
                                 </div>
                             </div>
                         </div>
@@ -40,3 +54,9 @@
         </div>
     </div>
 </section>
+<script src="~/js/prepareDeleteButtons.js"></script>
+@section Scripts {
+    <script>
+        prepareDeleteButtons('delete-studio-btn', 'confirm-delete-studio-btn');
+    </script>
+}
