--- a/MovieScribe/Views/Writer/Details.cshtml
+++ b/MovieScribe/Views/Writer/Details.cshtml
@@ -40,6 +40,21 @@
                                             @Model.Biography
                                         </p>
                                     </div>
+                                    <p class="card-text">
+                                        @if (User.Identity.IsAuthenticated && User.IsInRole("admin") || User.IsInRole("moderator"))
+                                        {
+                                            <b style="color: white;">Non-User actions:</b>
+                                            <a class="btn btn-success float-right" asp-action="Edit" asp-route-id="@Model.ID">Edit</a>
+                                            <form id="delete-writer-form" asp-controller="Writer" asp-action="DeleteConfirmed" method="post">
+                                                <input type="hidden" name="id" value="@Model.ID" />
+                                                <div id="delete-writer-button-container" class="float-right mt-2">
+                                                    <button id="delete-writer-btn" class="btn btn-danger">Delete</button>
+                                                    <button id="confirm-delete-writer-btn" type="submit" class="btn btn-danger" style="display: none;">Confirm Delete</button>
+                                                </div>
+                                            </form>
+                                        }
+                                    </p>
+
                                 </div>
                             </div>
                         </div>
@@ -49,3 +64,9 @@
         </div>
     </div>
 </section>
+<script src="~/js/prepareDeleteButtons.js"></script>
+@section Scripts {
+    <script>
+        prepareDeleteButtons('delete-writer-btn', 'confirm-delete-writer-btn');
+    </script>
+}
